[gd_scene load_steps=4 format=3 uid="uid://bm14q84sjqj0r"]

[ext_resource type="Script" uid="uid://b5snqwegg5hj8" path="res://scenes/cooking/ingredient.gd" id="1_hwoxp"]
[ext_resource type="Texture2D" uid="uid://crcd6kok7q35s" path="res://assets/images/textures/ruby_texture.png" id="2_6wbjr"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_hwoxp"]
bounce = 0.25

[node name="Ingredient" type="RigidBody2D" groups=["ingredient"]]
input_pickable = true
mass = 0.1
physics_material_override = SubResource("PhysicsMaterial_hwoxp")
freeze_mode = 1
script = ExtResource("1_hwoxp")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="."]
texture_repeat = 2
texture = ExtResource("2_6wbjr")

[connection signal="end_drag" from="." to="." method="_on_end_drag"]
[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="start_drag" from="." to="." method="_on_start_drag"]
